# kookmin-django-first

./: README.md  db.sqlite3  manage.py  pyproject.toml
MyFirstdjangoProject/: asgi.py  settings.py  urls.py  wsgi.py
blog/: admin.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_author.py  0003_alter_post_author.py  0004_category_post_category.py  0005_alter_category_options_alter_post_category.py  0006_tag.py  0007_post_tag.py  0008_rename_tag_post_tags.py  0009_alter_post_content.py  0010_comment.py  0011_alter_comment_created_at.py
blog/static/blog/css/: blog-font.css
blog/templates/blog/: base.html  bast_full_width.html  comment_form.html  footer.html  index.html  navbar.html  post_detail.html  post_form.html  post_list.html  post_update_form.html  single_post_page.html
single_pages/: urls.py  views.py
single_pages/static/single_pages/css/: about_me.css  landing.css
single_pages/templates/single_pages/: about_me.html  landing.html
